fixed alignment of item in topbar and started the typewriter effect on the main title

--- a/css/style.css
+++ b/css/style.css
@@ -204,7 +204,7 @@ a {
 .topnav {
     overflow: hidden;
     float: left;
-    margin-top: 3.25%;
+    margin-top: 3.35%;
     margin-bottom: 2.5%;
     margin-left: 5%;
     font-size: 1.15em;
@@ -262,7 +262,7 @@ a {
 
 .headersocials {
     float: right;
-    margin-top: 3%;
+    margin-top: 3.2%;
     margin-right: 5%;
 }
 
@@ -296,7 +296,7 @@ a {
 
 .headerhotline {
     float: right;
-    margin-top: 3%;
+    margin-top: 3.5%;
 }
 
 .headerhotline a {
